# hypercode

./: .gitignore  .pylintrc  AI_CONTEXT.md  ANTLR_IMPLEMENTATION.md  BROski_Bot_Consolidated_Research.md  CHANGELOG.md  COMPLETE_MANIFEST.txt  COMPREHENSIVE_PROJECT_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  DEVELOPMENT.md  FINAL_SUMMARY.txt  HYPERCODE_TEST_REPORT.md  HYPER_AGENTS.md  HYPER_REPORT.md  HyperCode-Project-Spec.md  HyperCode.g4  README.md  RELEASE_NOTES.md  ROADMAP.md  START_HERE.md  TEST_REPORT.md  The_Hyper_Caretaker  VIS4-Playbook.md  VIS5-Playbook.md  WHATS_IN_YOUR_WORKSPACE.txt  broski_bot.py  broski_caretaker.py  package-lock.json  package.json  phase3_dna_spec.md  pyproject.toml  render.yaml  requirements-dev.txt  setup-research-docs.bat  setup-research-docs.sh  setup.py  setup_antlr.sh  setup_guide.md  system_test.py  (+2 more)
HyperCode HomePage/: README.md  index.html
ai-agents/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  GETTING_STARTED.md  HyperCode Backend Refactoring Report.md  HyperCode Parser Implementation Report!  HyperCode Project Setup and Dependency Resolution Report  HyperCode Project Test Report  HyperCode Testing and Analysis Report  HyperCode_Status_Report_Dec2025.md  requirements.txt
examples/: __init__.py  bell_pair.hc  grover.hc  (+1 more)
hypercode-core/: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  debug_gg.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  test_api.py
hypercode-core/docs/: CONTRIBUTING.md  Dev_Report_Dec2025.md  GOVERNANCE.md  HyperCode CLI Enhancement Report  HyperCode Status Check  HyperCode-Strategic-Intelligence-Report.md  HyperCode_Research_Report_2025.md  Phase1_Complete_Summary.md  Phase1_Design_Sprint_1_Textual_Syntax.md  Phase1_Design_Sprint_2_Visual_Syntax.md  Phase1_Design_Sprint_3_Intermediate_Representation.md  bio_guide.md  hybrid_guide.md  hybrid_qubo.md
hypercode-core/examples/: bell_pair.hc  filter.hc  grover.hc  hybrid_logic.hc  parameterized_gate.hc
hypercode-core/examples/bio/: crispr_knockout.hc  pcr_amplification.hc
hypercode-core/examples/classical/: fizzbuzz.hc
hypercode-core/examples/hybrid/: benchmark_vs_classical.py  quantum_crispr.hc
hypercode-core/hypercode/: __init__.py  __main__.py  api.py  cli.py  compiler.py  errors.py  results.py  server.py  simulator.py
hypercode-core/hypercode/agents/: __init__.py  base_agent.py  caretaker.py  diagnostic.py  specialists.py
hypercode-core/hypercode/ast/: __init__.py  nodes.py
hypercode-core/hypercode/backends/: __init__.py  base.py  bio_utils.py  classical_backend.py  crispr_engine.py  molecular_backend.py
hypercode-core/hypercode/hybrid/: __init__.py  crispr_optimizer.py  qubo_solver.py
hypercode-core/hypercode/interpreter/: evaluator.py
hypercode-core/hypercode/ir/: __init__.py  lower_quantum.py  qir_nodes.py  type_checker.py  types.py
hypercode-core/hypercode/parser/: HyperCode.g4  HyperCode.interp  HyperCodeListener.py  parser.py
hypercode-core/tests/: test_bio.py  test_crispr.py  test_execution.py  test_golden_gate.py  test_hybrid.py  test_ir_quantum.py  test_quantum_crispr_e2e.py  test_quantum_v0.py  test_simulation_pcr.py  test_type_checker.py  test_v0.py
(+148 files in other folders)
